@@ -1945,6 +1945,16 @@ records:
         kind: object
         constraints:
           - record: Procedure
+      keyword:
+        label:
+          - value: keyword
+            lang: en
+        description:
+          - value: A keyword or tag describing a resource.
+            lang: en
+        propertyUri: dcat:keyword
+        kind: literal
+        repeatable: true
       observes:
         label:
           - value: observes
