@@ -11,7 +11,8 @@ DRAFT 0.4.1
 * NEW: Allow property `skos:altLabel` on `skos:Concept` records in the recordspec schema. (#7)
 * NEW: Added new property `fdri:measures` with range `fdri:Measure`. Property is used on `fdri:EnvironmentalMonitoringFacility` to capture the measures that the facility has the capablity to make, or on `fdri:EnvironmentalMonitoringFacilityType` to capture the measures that facilities of that type have the capablity to make. (#5)
 * NEW: Allow property `dct:identifier` on the `fdri:EnvironmentalMonitoringFacility` and `fdri:FacilityGroup` in the recordspec schema. (#18)
-* NEW: Added new property `fdri:calibrationDue` as an optional property of `fdri:EnvironmentalMonitoringSystem` (#17)
+* NEW: Added new property `fdri:calibrationDue` as an optional property of `fdri:EnvironmentalMonitoringSystem`. (#17)
+* NEW: Added property `dcat:keyword` as an optional, repeatable propety of `fdri:EnvironmentalMonitoringSystemType`. (#8)
 
 DRAFT 0.4
 ---------
